[gd_scene load_steps=2 format=2]

[ext_resource path="res://Maps/TemplateSpawner.gd" type="Script" id=1]

[node name="TemplateSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="LockedSpawnPoints" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="RoundTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="RoundTimer" to="." method="_on_RoundTimer_timeout"]
